Closed Bug 600471 Opened 14 years ago Closed 14 years ago

When attaching an already created attribute to a node, if you call setAttribute on the node, the attribute value will not be updated

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7
Tracking Status
blocking2.0 --- betaN+

People

(Reporter: mounir, Assigned: mounir)

References

Details

(Keywords: regression, testcase)

Attachments

(2 files)

Attached file testcase
Because AddMutationObserver is only called on nsDOMAttribute constructor, if a DOMAttribute is attached to a node _after_ being created, it's value will not be changed.
Attached patch Patch v1Splinter Review
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #479328 - Flags: review?(bzbarsky)
Attachment #479328 - Flags: review?(bzbarsky) → review+
blocking2.0: --- → ?
blocking2.0: ? → betaN+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: