Bug 600471 - Listen to the new content when an attribute is attached to it. r=bz a=blocking-2.0